--- a/UI/src/app/pages/brands/brands.component.css
+++ b/UI/src/app/pages/brands/brands.component.css
@@ -11,3 +11,41 @@ h2 {
 p {
   color: #666;
 }
+
+
+.item-blocks {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.item-block {
+  height: fit-content;
+  width: 15%;
+  margin-right: 2em;
+  margin-bottom: 2em;
+}
+
+.item-link {
+  text-decoration: none;
+  color: #000;
+}
+
+.item-img {
+  height: 100%;
+  width: 100%;
+  border-radius: 3vh;
+}
+
+.item-text {
+  margin: 0;
+  font-size: 18px;
+}
+
+.item-price {
+  width: 100%;
+  margin: 0;
+  font-size: 18px;
+  text-align: right;
+}
