--- a/UI/src/app/pages/cart/cart.component.css
+++ b/UI/src/app/pages/cart/cart.component.css
@@ -11,6 +11,8 @@
 .cart {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   min-height: 15vh;
 }
 
@@ -27,7 +29,7 @@
 
 .cart-item {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 
