--- a/UI/src/app/pages/cart/cart.component.css
+++ b/UI/src/app/pages/cart/cart.component.css
@@ -19,6 +19,10 @@
 .products {
   width: 100%;
   margin-right: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .cart-list {
