--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -262,3 +262,14 @@ p {
   object-fit: cover;
   margin: 0;
 }
+
+.tooltip {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  background-color: $color-secondary-hover;
+  color: $color-secondary-text;
+  z-index: 2;
+}
